Add Tidio chat widget and disable custom chatbot

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  
-
+    
+    <!-- Tidio Chat Widget -->
+    <script src="//code.tidio.co/1ykovhtkiijf2y8ahgmgyb13xeqgqqhc.js" async></script>
   </body>
 </html>
